--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -23,7 +23,7 @@ body {
     /* font-size: 16px; */
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
 }
 
 .header {
@@ -42,12 +42,12 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .text-box {
@@ -63,14 +63,14 @@ body {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden; /* stop the small shaking from moving after animation */
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation-name: moveInLeft; /* animation properties */
     animation-duration: 1s;
@@ -81,19 +81,19 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
 }
 
 @keyframes moveInLeft {
     0% {
         opacity: 0; 
-        transform: translateX(-100%); /*x is left to right, y is top to bottom*/
+        transform: translateX(-10rem); /*x is left to right, y is top to bottom*/
     }
 
     80% {
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
 
     100% {
@@ -105,7 +105,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0; 
-        transform: translateY(30px); 
+        transform: translateY(3rem); 
     }
 
     100% {
@@ -119,9 +119,9 @@ body {
 .btn:visited { /*pseudo class*/ 
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block; 
-    border-radius: 100px; 
+    border-radius: 10rem; 
     transition: all .2s;
     position: relative;
 }
@@ -145,7 +145,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top:0;
     left:0;
