--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -14,7 +14,7 @@ Dark green: #28b485
 }
 
 html {
-    font-size: 10px;
+    font-size: 62.5%; /* best practice for 16px */
 }
 
 body {
@@ -124,6 +124,7 @@ body {
     border-radius: 10rem; 
     transition: all .2s;
     position: relative;
+    font-size: 1.6rem;
 }
 
 .btn:hover {
