--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -3,6 +3,8 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark:#28b485;
 
+$color-grey-dark: #777;
+
 *,
 *::after,
 *::before {
@@ -20,7 +22,7 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color: #777;
+    color: $color-grey-dark;
     padding: 3rem;
     box-sizing: border-box;
 }
@@ -29,9 +31,10 @@ body {
     height: 95vh;
     background-image: linear-gradient(
         to right bottom, 
-        rgba($color-primary-light, 0.705), 
-        rgba($color-primary-dark, 0.418)), 
+        rgba($color-primary-light, 0.7), 
+        rgba($color-primary-dark, 0.4)), 
     url(../img/hero.jpg);
+
     background-size: cover; /* match whatever the width of viewport/element */
     background-position: top; /* OR CENTER ensures top image always stays at top of container when resizing */
     position: relative;
@@ -137,7 +140,7 @@ body {
 
 .btn--white {
     background-color: #fff;
-    color: #777;
+    color: $color-grey-dark;
 }
 
 .btn::after {
