--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -20,7 +20,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgbaa(#7ed56f, 0.705), rgba(40, 180, 133, 0.418)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.7), rgba(40, 180, 133, 0.4)), url(../img/hero.jpg);
   background-size: cover;
   /* match whatever the width of viewport/element */
   background-position: top;
