--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark:#28b485;
 
 $color-grey-dark: #777;
+$color-white: #fff;
 
 *,
 *::after,
@@ -62,7 +63,7 @@ body {
 }
 
 .heading-primary {
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden; /* stop the small shaking from moving after animation */
     margin-bottom: 5.5rem;
@@ -139,7 +140,7 @@ body {
 }
 
 .btn--white {
-    background-color: #fff;
+    background-color: $color-white;
     color: $color-grey-dark;
 }
 
@@ -157,7 +158,7 @@ body {
 }
 
 .btn--white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after {
