--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -46,7 +46,7 @@ body {
   text-align: center; }
 
 .heading-primary {
-  color: #fff;
+  color: white;
   text-transform: uppercase;
   backface-visibility: hidden;
   /* stop the small shaking from moving after animation */
@@ -111,7 +111,7 @@ body {
   transform: translateY(-1px); }
 
 .btn--white {
-  background-color: #fff;
+  background-color: white;
   color: #777; }
 
 .btn::after {
@@ -127,7 +127,7 @@ body {
   transition: all .4s; }
 
 .btn--white::after {
-  background-color: #fff; }
+  background-color: white; }
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
