--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -108,7 +108,8 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
 
 .btn:active {
-  transform: translateY(-1px); }
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
   background-color: white;
