--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -5,6 +5,7 @@ $color-primary-dark:#28b485;
 
 $color-grey-dark: #777;
 $color-white: white;
+$color-black: #000;
 
 *,
 *::after,
@@ -132,11 +133,12 @@ body {
 
 .btn:hover {
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    box-shadow: 0 10px 20px rgba($color-black, .2);
 }
 
 .btn:active {
     transform: translateY(-1px);
+    box-shadow: 0 .5rem 1rem rgba($color-black, .2);
 }
 
 .btn--white {
