--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -41,27 +41,31 @@ body {
     background-position: top; /* OR CENTER ensures top image always stays at top of container when resizing */
     position: relative;
 
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%) /*clip off the corner*/
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); /*clip off the corner*/
+
+    &__logo-box {
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+
+
+    &__logo {
+        height: 3.5rem;
+    }
+
+    &__text-box {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%); /* no longer in relation to parent, but to element*/
+        /* otherwise it gets 50% from start of the h1 header */
+        text-align: center;
+    }
 }
 
-.header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
 
-.header__logo {
-    height: 3.5rem;
-}
 
-.header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* no longer in relation to parent, but to element*/
-    /* otherwise it gets 50% from start of the h1 header */
-    text-align: center;
-}
 
 .heading-primary {
     color: $color-white;
