btn modifiers and pseudo classes replace with amperstand

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -87,8 +87,7 @@ body {
     opacity: 1;
     transform: translate(0); } }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   /*pseudo class*/
   text-transform: uppercase;
   text-decoration: none;
