--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -141,6 +141,11 @@ body {
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 10px 20px rgba($color-black, .2);
+
+        &::after {
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
     }
     
     &:active {
@@ -151,6 +156,10 @@ body {
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
+
+            &::after {
+            background-color: $color-white;
+        }
     }
     
     &::after {
@@ -166,14 +175,6 @@ body {
         transition: all .4s;
     }
     
-    &--white::after {
-        background-color: $color-white;
-    }
-    
-    &:hover::after {
-        transform: scaleX(1.4) scaleY(1.6);
-        opacity: 0;
-    }
     
     &--animated {
         animation: moveInBottom .5s ease-out .75s;
