--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -107,6 +107,11 @@ body {
   animation-fill-mode: backwards;
   /* apply styles up to 0% before it starts*/ }
 
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+  background-color: #eee; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.7), rgba(40, 180, 133, 0.4)), url(../img/hero.jpg);
