--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -1,6 +1,7 @@
 .row {
-    max-width: 114rem;
+    max-width: $grid-width;
     margin: 0 auto;
     background-color: #eee;
+    margin-bottom: $grid-vertical;
 }
 
