--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -4,7 +4,19 @@
     background-color: #eee;
 
     &:not(:last-child) {
-        margin-bottom: $grid-vertical;
+        margin-bottom: $gutter-vertical;
+    }
+
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
+        background-color: pink;
+        float: left;
+
+
+        &:not(:last-child) {
+            margin-right: $gutter-horizontal;
+        }
     }
 }
 
