--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -10,7 +10,7 @@
 
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
-        background-color: pink;
+        background-color: red;
         float: left;
 
 
