--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -113,9 +113,13 @@ body {
   background-color: #eee; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2);
-    background-color: pink;
+    background-color: red;
     float: left; }
     .row .col-1-of-2:not(:last-child) {
       margin-right: 6rem; }
