--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -7,7 +7,8 @@
         margin-bottom: $gutter-vertical;
     }
 
-
+    @include clearfix;
+    
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
         background-color: red;
@@ -19,4 +20,5 @@
         }
     }
 }
+
 
