--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -9,16 +9,38 @@
 
     @include clearfix;
     
-    .col-1-of-2 {
-        width: calc((100% - #{$gutter-horizontal}) / 2);
+    //^ start with
+    //* contains
+    //$ ends with 
+
+    //select all elements that start with "col"
+    [class^="col-"] { 
         background-color: red;
-        float: left;
-
-
+        float: left; 
+        
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
         }
     }
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
+
+
+
+
+    }
+
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal}/3));
+
+    }
+
+    .col-1-of-4 {
+        width: calc((100% - 2 * #{$gutter-horizontal}/3));
+
+    }
+
 }
 
 
