--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -125,6 +125,10 @@ body {
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem)/3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem)/3)+ 6rem); }
+  .row .col-1-of-4 {
     width: calc((100% - 2 * 6rem/3)); }
   .row .col-1-of-4 {
     width: calc((100% - 2 * 6rem/3)); }
