--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -32,6 +32,15 @@
     }
 
     .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal})/3);
+
+    }
+
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal})/3)+ #{$gutter-horizontal});
+
+    }
+    .col-1-of-4 {
         width: calc((100% - 2 * #{$gutter-horizontal}/3));
 
     }
