--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -127,11 +127,13 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem)/3); }
   .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * 6rem)/3)+ 6rem); }
+    width: calc(2 * ((100% - 2 * 6rem)/3) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - 2 * 6rem/3)); }
   .row .col-1-of-4 {
-    width: calc((100% - 2 * 6rem/3)); }
+    width: calc((100% - 3 * 6rem)/4); }
+  .row .col-2-of-4 {
+    width: calc(2 *((100% - 2 * 6rem/3))); }
 
 .header {
   height: 95vh;
