--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -37,7 +37,7 @@
     }
 
     .col-2-of-3 {
-        width: calc(2 * ((100% - 2 * #{$gutter-horizontal})/3)+ #{$gutter-horizontal});
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal})/3) + #{$gutter-horizontal});
 
     }
     .col-1-of-4 {
@@ -46,10 +46,13 @@
     }
 
     .col-1-of-4 {
-        width: calc((100% - 2 * #{$gutter-horizontal}/3));
+        width: calc((100% - 3 * #{$gutter-horizontal})/4);
 
     }
+    .col-2-of-4 {
+        width: calc(2 *((100% - 2 * #{$gutter-horizontal}/3)));
 
+    }
 }
 
 
