--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -50,9 +50,13 @@
 
     }
     .col-2-of-4 {
-        width: calc(2 *((100% - 2 * #{$gutter-horizontal}/3)));
+        width: calc(2 *((100% - 3 * #{$gutter-horizontal})/4)+#{$gutter-horizontal});
 
     }
+    .col-3-of-4 {
+        width: calc(3*((100%-3 * #{$gutter-horizontal})/4)+2* #{$gutter-horizontal});
+    }
+
 }
 
 
