--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -62,6 +62,18 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg); }
+
 .btn:link, .btn:visited {
   /*pseudo class*/
   text-transform: uppercase;
