--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -40,5 +40,20 @@
     &:hover {
         transform: skewY(2deg) skewX(15deg); //like a seesaw 
         //skewX looks italicized but other direction
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
+}
+
+.heading-tertiary {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: 1.6rem;
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+    //everything but last child
 }
