--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -95,7 +95,7 @@ body {
   margin-bottom: 4rem; }
 
 .u-margin-bottom-small {
-  margin-bottom: 2rem; }
+  margin-bottom: 1.5rem; }
 
 .btn:link, .btn:visited {
   /*pseudo class*/
@@ -141,6 +141,14 @@ body {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards;
   /* apply styles up to 0% before it starts*/ }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px; }
 
 .row {
   max-width: 114rem;
