--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -51,7 +51,7 @@
 }
 
 .paragraph {
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
