--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -161,6 +161,12 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0px); }
 
+.composition__photo {
+  width: 55%;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  position: absolute; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
