--- a/Natours/starter/sass/components/_composition.scss
+++ b/Natours/starter/sass/components/_composition.scss
@@ -7,6 +7,7 @@
         border-radius: 2px;
         position: absolute;
         transition: all .2s;
+        outline-offset: 2rem; //space between border and outline, can't do with border
         
         &--p1{
             left: 0;
@@ -22,6 +23,7 @@
         }
 
         &:hover {
+            outline: 1.5rem solid $color-primary;
             transform: scale(1.05);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 20;
