--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/composition";
+@import "components/_feature-box";
 
 @import "layout/grid";
 @import "layout/header";
