color fade effect on logo

--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -30,6 +30,7 @@
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
+    display: inline-block;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
     -webkit-background-clip: text; // clip it to text, webkit. need prefix cuz it's so new
     color: transparent; //need this as well
