--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -12,4 +12,10 @@
         rgba($color-primary-dark, 0.8)), 
     url(../img/nat-4.jpg);
     background-size: cover;
+
+    transform: skewY(-7deg);
+
+    & > * { //universal selector for ALL direct child
+        transform: skewY(7deg);
+    }
 }
