--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -164,11 +164,12 @@ body {
 
 .card {
   perspective: 150rem;
-  -moz-perspective: 150rem;
-  background-color: orangered;
-  height: 50rem;
-  transition: all .8s; }
-  .card:hover {
+  -moz-perspective: 150rem; }
+  .card__side {
+    background-color: orangered;
+    height: 50rem;
+    transition: all .8s; }
+  .card:hover .card__side {
     transform: rotateY(180deg); }
 
 .composition {
