--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -1,12 +1,17 @@
 .card {
     perspective: 150rem; 
     -moz-perspective: 150rem; //to work in firefox as well
-    
-    background-color: orangered;
-    height: 50rem;
-    transition: all .8s;
 
-    &:hover {
+
+    &__side {
+        background-color: orangered;
+        height: 50rem;
+        transition: all .8s;
+    }
+    
+
+
+    &:hover &__side{
         transform: rotateY(180deg);
     }
 }
