--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -5,6 +5,8 @@
 
     &__side {
         background-color: orangered;
+        color: #fff;
+        font-size: 2rem;
         height: 50rem;
         transition: all .8s;
     }
