--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -167,6 +167,8 @@ body {
   -moz-perspective: 150rem; }
   .card__side {
     background-color: orangered;
+    color: #fff;
+    font-size: 2rem;
     height: 50rem;
     transition: all .8s; }
   .card:hover .card__side {
