--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -9,6 +9,13 @@
         font-size: 2rem;
         height: 50rem;
         transition: all .8s;
+
+        &--front {
+            background-color: orangered;
+        }
+        &--back {
+            background-color: green;
+        }
     }
     
 
