--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -164,13 +164,19 @@ body {
 
 .card {
   perspective: 150rem;
-  -moz-perspective: 150rem; }
+  -moz-perspective: 150rem;
+  position: relative; }
   .card__side {
     background-color: orangered;
     color: #fff;
     font-size: 2rem;
     height: 50rem;
-    transition: all .8s; }
+    transition: all .8s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden; }
     .card__side--front {
       background-color: orangered; }
     .card__side--back {
