--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -165,13 +165,14 @@ body {
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
-  position: relative; }
+  position: relative;
+  height: 50rem; }
   .card__side {
     background-color: orangered;
     color: #fff;
     font-size: 2rem;
     height: 50rem;
-    transition: all .8s;
+    transition: all .8s ease;
     position: absolute;
     top: 0;
     left: 0;
