--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -2,13 +2,15 @@
     perspective: 150rem; 
     -moz-perspective: 150rem; //to work in firefox as well
     position: relative;
+    height: 50rem; //necessary to have for card to match height
 
     &__side {
         background-color: orangered;
         color: #fff;
         font-size: 2rem;
+
         height: 50rem;
-        transition: all .8s;
+        transition: all .8s ease;
         position: absolute;
         top: 0;
         left: 0;
