--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -18,7 +18,7 @@
         backface-visibility: hidden; //hides back part of element
 
         &--front {
-            background-color: orangered;
+            background-color: $color-white;
         }
         &--back {
             background-color: green;
