--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -191,7 +191,8 @@ body {
   .card:hover .card__side--back {
     transform: rotateY(0deg); }
   .card__picture {
-    background-size: cover; }
+    background-size: cover;
+    height: 23rem; }
     .card__picture--1 {
       background-image: url(../img/nat-5.jpg); }
     .card__picture--2 {
