--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -46,7 +46,8 @@
     // FRONT SIDE STYLING
     &__picture {
         background-size: cover;
-        
+        height: 23rem;
+
         &--1 {
             background-image: url(../img/nat-5.jpg);
         }
