prefix wekit clip path so all other browsers can see

--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -50,6 +50,7 @@
         height: 23rem;
         background-blend-mode: screen;//doesnt work on IE or Microsoft edge other 
         //options: soft-light
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
         &--1 {
