--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -284,6 +284,7 @@ body {
   background-position: top;
   /* OR CENTER ensures top image always stays at top of container when resizing */
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   /*clip off the corner*/ }
   .header__logo-box {
