--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -168,9 +168,6 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    background-color: orangered;
-    color: #fff;
-    font-size: 2rem;
     height: 50rem;
     transition: all .8s ease;
     position: absolute;
@@ -203,6 +200,11 @@ body {
       background-image: url(../img/nat-6.jpg); }
     .card__picture--3 {
       background-image: url(../img/nat-7.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white; }
 
 .composition {
   position: relative; }
