--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -6,10 +6,6 @@
     
 
     &__side {
-        background-color: orangered;
-        color: #fff;
-        font-size: 2rem;
-
         height: 50rem;
         transition: all .8s ease;
         position: absolute;
@@ -65,5 +61,12 @@
         &--3 {
             background-image: url(../img/nat-7.jpg);
         }
+    }
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: $color-white;
     }
 }
