--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -204,7 +204,11 @@ body {
     font-size: 2.8rem;
     font-weight: 300;
     text-transform: uppercase;
-    color: white; }
+    text-align: right;
+    color: white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem; }
 
 .composition {
   position: relative; }
