--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -72,5 +72,15 @@
         position: absolute;
         top: 12rem;
         right: 2rem;
+
+        
+    }
+
+
+    &__heading-span {
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85))
+        }
     }
 }
