box dec comment

--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -80,7 +80,7 @@
     &__heading-span {
         padding: 1rem 1.5rem;
         -webkit-box-decoration-break:clone;
-        box-decoration-break:clone;
+        box-decoration-break:clone; //apply all decorations to selectors to all boxes 
 
         &--1 {
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85))
