--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -232,7 +232,13 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: white; }
   .card__price-only {
     font-size: 1.4rem;
     text-transform: uppercase; }
