--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -56,10 +56,14 @@
 
         }
         &--2 {
-            background-image: url(../img/nat-6.jpg);
+            background-image: 
+            linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            url(../img/nat-6.jpg);
         }
         &--3 {
-            background-image: url(../img/nat-7.jpg);
+            background-image: 
+            linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            url(../img/nat-7.jpg);
         }
     }
 
