--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -57,12 +57,12 @@
         }
         &--2 {
             background-image: 
-            linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
             url(../img/nat-6.jpg);
         }
         &--3 {
             background-image: 
-            linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
             url(../img/nat-7.jpg);
         }
     }
@@ -89,6 +89,13 @@
         &--1 {
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85))
         }
+        &--2 {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .85), rgba($color-primary-dark, .85))
+        }
+        &--3 {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85))
+        }
+
     }
 
     &__details {
