--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -129,6 +129,12 @@ body {
   .btn--white::after {
     background-color: white; }
 
+.btn--green {
+  background-color: #55c57a;
+  color: white; }
+  .btn--green::after {
+    background-color: #55c57a; }
+
 .btn::after {
   content: "";
   display: inline-block;
