--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -54,6 +54,8 @@
         //options: soft-light
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); //for other browsers, must be first
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
 
         &--1 {
             background-image: 
