add photo into circle shape

--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -12,11 +12,16 @@
         width: 15rem;
         height: 15rem;
         float: left;
-        background-color: orangered;
         -webkit-shape-outside: circle(50% at 50% 50%); //required in safari
         shape-outside: circle(50% at 50% 50%); //requires width, height and float DEFINES WHERE CONTENT FLOATS
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%); //how element looks like circle
         transform: translateX(-3rem); //moves to the left
+    }
+
+
+    &__img {
+        height: 100%; //img is inside shape, so 100% of parent
+        
     }
 }
