add caption for name

--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -22,14 +22,25 @@
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%); //how element looks like circle
         transform: translateX(-3rem) skewX(12deg); //moves to the left & added skewX to fix the pic
+        position: relative;
     }
 
     &__img {
         height: 100%; //img is inside shape, so 100% of parent
-        
     }
 
     &__text {
         transform: skewX(12deg);
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
     }
 }
