--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -27,6 +27,9 @@
 
     &__img {
         height: 100%; //img is inside shape, so 100% of parent
+        transform: translateX(-4rem) scale(1.4);
+        backface-visibility: hidden; 
+        transition: all .5s;
     }
 
     &__text {
@@ -44,10 +47,15 @@
         text-align: center;
         opacity: 0;
         transition: all .5s;
+        backface-visibility: hidden; //fixes weird little glitches from animation
     }
 
     &:hover &__caption {
         opacity: 1;
         transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: translateX(-4rem) scale(1);
     }
 }
