add blur and brightness

--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -57,5 +57,6 @@
 
     &:hover &__img {
         transform: translateX(-4rem) scale(1);
+        filter: blur(3px) brightness(80%); // lower than 100=darker, more than 100=brighter
     }
 }
