--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -104,6 +104,15 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15; }
+
 .btn:link, .btn:visited {
   /*pseudo class*/
   text-transform: uppercase;
@@ -434,5 +443,5 @@ body {
   margin-top: -10rem; }
 
 .section-stories {
-  padding: 15rem 0;
-  background-color: #f7f7f7; }
+  position: relative;
+  padding: 15rem 0; }
