--- a/Natours/starter/sass/components/_bg-video.scss
+++ b/Natours/starter/sass/components/_bg-video.scss
@@ -6,4 +6,12 @@
     width: 100%;
     z-index: -1;
     opacity: .15;
+
+    &__content {
+        height: 100%;
+        width: 100%;
+        object-fit: cover; //similar to background size cover (like with images)
+        //works with HTML element, video in this case, but works with images too
+        //fill parent, while fulfilling it's aspect ratio
+    }
 }
